[gd_scene load_steps=10 format=3 uid="uid://fjug7h5xukk3"]

[ext_resource type="Script" path="res://unit drafting/Unit_Commander Draft/army_drafting.gd" id="1_54qw1"]
[ext_resource type="Theme" uid="uid://b2mckyi1bs3eo" path="res://unit drafting/Unit_Commander Draft/draft_selector_thin_border.tres" id="1_lrntn"]
[ext_resource type="PackedScene" uid="uid://b8ack2q1osxdy" path="res://overworld/gold_counter.tscn" id="2_xuf8l"]
[ext_resource type="Theme" uid="uid://c8byph20nnc1c" path="res://unit drafting/Unit_Commander Draft/draft_selector_thick_border.tres" id="4_rj5ra"]
[ext_resource type="PackedScene" uid="uid://b1ji0ny03ko81" path="res://unit drafting/Unit_Commander Draft/unit_draft_controls.tscn" id="5_0gh02"]

[sub_resource type="Theme" id="Theme_stt1w"]
default_font_size = 36

[sub_resource type="Theme" id="Theme_y16wd"]
default_font_size = 36

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3b7fu"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Theme" id="Theme_i2tp0"]
default_font_size = 24
PanelContainer/styles/panel = SubResource("StyleBoxFlat_3b7fu")

[node name="ArmyDrafting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lrntn")
script = ExtResource("1_54qw1")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 36
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
modulate = Color(0.509804, 0.509804, 0.509804, 1)
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(1150, 36)
layout_mode = 2
theme = SubResource("Theme_stt1w")

[node name="ArmyDraftStageLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Army Draft - Stage 1 of 3"
uppercase = true

[node name="PickAmountLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Pick 1 of 1"
horizontal_alignment = 2

[node name="GoldCounter" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_xuf8l")]
layout_mode = 2
autowrap_mode = 0

[node name="HeaderPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(830, 78)
layout_mode = 2
theme = ExtResource("4_rj5ra")

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_y16wd")
text = "Choose a Commander"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="ArmyListContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(870, 34)
layout_mode = 2
size_flags_stretch_ratio = 2.83
theme = SubResource("Theme_i2tp0")

[node name="ArmyListLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/ArmyListContainer"]
visible = false
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
text = "Army: "

[node name="ArchetypeIconContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/ArmyListContainer"]
layout_mode = 2

[node name="UnitDraftControls" parent="MarginContainer" instance=ExtResource("5_0gh02")]
layout_mode = 2
size_flags_vertical = 8

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
